test/deriver/errors/unsupported_type_open_polyvar.ml
type 'a t = [> `Alpha | `Beta ] as 'a [@@deriving irmin]
